chnaged the color

--- a/Homeworks/HW6/blazerid.hw6.css
+++ b/Homeworks/HW6/blazerid.hw6.css
@@ -21,7 +21,7 @@ body {
 
 /* Style grid items */
 .grid-item {
-    background-color: #3498db; /* Replace with your preferred background color */
+    background-color: #040a0e; /* Replace with your preferred background color */
     display: flex;
     justify-content: center;
     align-items: center;
