--- a/Homeworks/HW6/blazerid.hw6.css
+++ b/Homeworks/HW6/blazerid.hw6.css
@@ -27,4 +27,5 @@ body {
     /* Set the width and height to create 1:1 squares */
     width: 100%;
     padding-top: 100%; /* Maintain a 1:1 aspect ratio */
+    text-align: center; /* Center text horizontally */
 }
