--- a/Homeworks/HW6/blazerid.hw6.css
+++ b/Homeworks/HW6/blazerid.hw6.css
@@ -26,7 +26,7 @@ body {
     color: #fff; /* Ensure sufficient contrast with background */
     /* Set the width and height to create 1:1 squares */
     width: 150px
-    height: 150px; /* Match the width to maintain a square shape */
+    height 150px; /* Match the width to maintain a square shape */
     text-align: center; /* Center text horizontally */
     border-radius: 10px; /* Add rounded corners */
 }
