chnaged spacing in css

--- a/Labs/Labs/Lab5/style.css
+++ b/Labs/Labs/Lab5/style.css
@@ -86,6 +86,9 @@ nav a {
 nav a:hover {
     color: var(--link-hover-color);
 }
+#header {
+    text-align: center; /* Center-align the contents */
+}
 
 /* Documentation and Comments */
 /* This puts a yellow frame around the page */
