--- a/Homeworks/HW7/hw7.westond.css
+++ b/Homeworks/HW7/hw7.westond.css
@@ -1,3 +1,5 @@
- main {
-    display: flex;
-  }
+.photo-grid {
+    display: grid;
+    grid-template-columns:repeat(auto-fill, minmax(300px,1fr));
+    gap: 20px;
+}
