--- a/Homeworks/HW7/hw7.westond.css
+++ b/Homeworks/HW7/hw7.westond.css
@@ -3,3 +3,7 @@
     grid-template-columns:repeat(auto-fill, minmax(300px,1fr));
     gap: 20px;
 }
+.photo-grid div {
+    width: 300px;
+    height: 300px;
+}
